[package]
name = "walletd_hedera_int"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hedera = "0.28.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0.32", features = ["derive"] }
dotenvy = "0.15.6"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
